--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@
     url: 'https://webdevserv.github.io/html_bites/dev/testform.html'
     name: 'config'
     file: 'assets/config.json'
-    data: '{"Name":"value_1","key_2": "value_2"}'}'
+    data: '{"Name":"value_1","key_2": "value_2"}'
   outputs:
     response:
     description: 'The response of POST request'
