--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@
   inputs:
     url: 'https://webdevserv.github.io/html_bites/dev/testform.html'
     name: 'config'
-    file: 'assets/config.json'
+    file: 'dev/assets/config.json'
     data: '{"Name":"value_1","key_2": "value_2"}'
   outputs:
     response:
     description: 'The response of POST request'
   runs:
-    main: 'src/index.js'
+    main: 'dev/src/index.js'
